Co-authored-by: Chrisser1 <Chrisser1@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
     "xlocale": "cpp",
     "initializer_list": "cpp",
     "xutility": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "algorithm": "c",
+    "xiosbase": "c",
+    "cmath": "c",
+    "stdlib.h": "c"
   }
 }
